sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/Employee_Emergency_Contacts__c.object-meta.xml
<CustomObject>
    <description>Employee Emergency Contacts</description>
    <label>Employee Emergency Contact</label>
    <nameField>
        <displayFormat>EEC-{000000}</displayFormat>
        <label>Emergency Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Emergency Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>