sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/A__c.field-meta.xml
<CustomField>
    <fullName>A__c</fullName>
    <description>Address Line 1</description>
    <inlineHelpText>Address Line 1</inlineHelpText>
    <label>Address Line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>