sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Contact Name</description>
    <inlineHelpText>Contact Name</inlineHelpText>
    <label>Contact Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>