sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <inlineHelpText>Country</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_List</valueSetName>
    </valueSet>
</CustomField>