sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <description>Employee</description>
    <inlineHelpText>Employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Emergency Contacts</relationshipLabel>
    <relationshipName>Employee_Emergency_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>