sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>Home Phone</description>
    <inlineHelpText>Home Phone</inlineHelpText>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>