sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <description>Mobile Phone</description>
    <inlineHelpText>Mobile Phone</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>