sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>Post Code</description>
    <inlineHelpText>Post Code</inlineHelpText>
    <label>Post Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>