sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary Contact</description>
    <inlineHelpText>Primary Contact</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>