sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <description>Relationship to Contact</description>
    <inlineHelpText>Relationship to Contact</inlineHelpText>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Husband</fullName>
            </value>
            <value>
                <fullName>Wife</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Sister</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Uncle</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Boyfriend</fullName>
            </value>
            <value>
                <fullName>Girlfriend</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Room mate</fullName>
            </value>
            <value>
                <fullName>Fiancee</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>