sfSandBoxCode/force-app/main/default/objects/Employee_Emergency_Contacts__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <description>Work Phone</description>
    <inlineHelpText>Work Phone</inlineHelpText>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>